--- a/blog/_posts/2019-05-27-breached.md
+++ b/blog/_posts/2019-05-27-breached.md
@@ -10,6 +10,8 @@ In October 2017, Troy Hunt of [Have I Been Pwned](https://haveibeenpwned.com/) h
 
 I decided to create a browser extension that would simply pull HIBP breach information and show a browser notification -- with the ability to view extra info -- when the user visited a site that had been breached. And so was born the [Breached extension](https://github.com/adam-p/breached). (Spoiler: I didn't win.)
 
+> For non-technical readers: A "breach", in this context, is when a hacker obtains the user database of a website. A breach generally includes email addresses, passwords (in some form), maybe credit cards, and other stuff you don't want a hacker to have. So "breach information" about a website tells you that a breach occurred, when it happened, what data was stolen, and how much of it. Which is the kind of thing you should know about before using that website!
+
 A month after I released the extension, someone created an issue pointing out that Mozilla ["started working on integrating haveibeenpwned.com warnings into Firefox"](https://github.com/adam-p/breached/issues/5). (As I promised there I did (nominally) reach out, but it didn't go anywhere.) A year later that project turned into [Firefox Monitor](https://monitor.firefox.com/).
 
 So, Breached is basically redundant on Firefox. In a sense I'm bummed, but I'm more flattered -- it was obviously a pretty okay idea!
@@ -18,14 +20,22 @@ Monitor has a different [notification policy](https://blog.mozilla.org/security/
 
 In case you're wondering what Monitor notifications look like, here's one:
 
-![Firefox Monitor breach notification](/assets/img/blog/firefox-monitor-breach.png "Firefox Monitor breach notification")
+<p class="text-center">
+  <img src="/assets/img/blog/firefox-monitor-breach.png" alt="Firefox Monitor breach notification" title="Firefox Monitor breach notification"
+       style="max-width: 600px;">
+</p>
 
 And here is Breached's notification:
 
-![Breached's breach notification](/assets/img/blog/breached-notification.png "Breached's breach notification")
+<p class="text-center">
+  <img src="/assets/img/blog/breached-notification.png" alt="Breached's breach notification" title="Breached's breach notification"
+       style="max-width: 400px;">
+</p>
 
 And the additional-detail popup:
 
-![Breached's additional detail popup](/assets/img/blog/breached-popup.png "Breached's additional detail popup")
+<p class="text-center">
+  <img src="/assets/img/blog/breached-popup.png" alt="Breached's additional detail popup" title="Breached's additional detail popup">
+</p>
 
 Well, at least Breached is still relevant on Chrome! For now...
