Remove social sharing and disable Disqus everywhere

--- a/blog/_posts/2019-05-27-breached.md
+++ b/blog/_posts/2019-05-27-breached.md
@@ -3,7 +3,7 @@ layout: post
 title: "The short happy life of the Breached extension"
 tags:
 published: true
-comments: true
+comments: false
 ---
 
 In October 2017, Troy Hunt of [Have I Been Pwned](https://haveibeenpwned.com/) held a [contest](https://www.troyhunt.com/do-something-awesome-with-have-i-been-pwned-and-win-a-lenovo-thinkpad/) inviting people to do something cool with the HIBP API. I decided a) that I would kind of like the special edition ThinkPad he was giving away, and b) that I could probably whip something up pretty quickly.
