--- a/content/blog/2019-05-27-breached.md
+++ b/content/blog/2019-05-27-breached.md
@@ -5,7 +5,7 @@ published: true
 tags: null
 title: The short happy life of the Breached extension
 slug: breached
-aliases: ['breached']
+aliases: ['breached.html']
 ---
 
 In October 2017, Troy Hunt of [Have I Been Pwned](https://haveibeenpwned.com/) held a [contest](https://www.troyhunt.com/do-something-awesome-with-have-i-been-pwned-and-win-a-lenovo-thinkpad/) inviting people to do something cool with the HIBP API. I decided a) that I would kind of like the special edition ThinkPad he was giving away, and b) that I could probably whip something up pretty quickly.
