--- a/content/blog/2019-05-27-breached.md
+++ b/content/blog/2019-05-27-breached.md
@@ -1,7 +1,7 @@
 ---
 comments: false
 date: "2019-05-27T00:00:00Z"
-published: true
+draft: false
 tags: null
 title: The short happy life of the Breached extension
 slug: breached
